--- a/css/styles.css
+++ b/css/styles.css
@@ -362,12 +362,21 @@ margin-top: 40px;
   position:relative;
 }
 .about .about-content .skills .skill-item {
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 .about .about-content .skills .skill-item .progress .progress-in {
   position: absolute;
   left: 0;
   top: 0;
+  height: 100%;
   border-radius: 4px;
-  background-color: blue;
+  background-color: var(--skin-color);
 }
+/* .about .about-content .skills .skill-item .skill-percent {
+  position: absolute;
+  right: 0;
+  color: var(--bg-black-900);
+  top: -40px;
+  font-weight: 400;
+  line-height: 40px;
+} */
