--- a/css/styles.css
+++ b/css/styles.css
@@ -372,11 +372,11 @@ margin-top: 40px;
   border-radius: 4px;
   background-color: var(--skin-color);
 }
-/* .about .about-content .skills .skill-item .skill-percent {
+.about .about-content .skills .skill-item .skill-percent {
   position: absolute;
   right: 0;
-  color: var(--bg-black-900);
+  color: red;
   top: -40px;
   font-weight: 400;
   line-height: 40px;
-} */
+}
