--- a/css/styles.css
+++ b/css/styles.css
@@ -473,3 +473,10 @@ margin-top: 40px;
 .service .service-item .service-item-inner:hover {
   box-shadow: 0 0 20px rgba(48, 46, 77, 0.15) ;
 }
+.service .service-item .service-item-inner .icon {
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto 30px;
+}
