--- a/css/styles.css
+++ b/css/styles.css
@@ -457,6 +457,9 @@ margin-top: 40px;
   color: var(--text-black-700);
 }
 /* service */
+.service .container {
+  padding-bottom: 40px;
+}
 .service .service-item {
   margin-bottom: 30px;
   flex: 0 0 33.33%;
