--- a/css/styles.css
+++ b/css/styles.css
@@ -509,3 +509,12 @@ margin-top: 40px;
   color: var(--text-black-700);
   line-height: 25px;
 }
+/* portfolio */
+.portfolio .portfolio-heading {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+.portfolio .portfolio-heading h2 {
+  color: var(--text-black-900);
+  font-weight: 500;
+}
