--- a/css/styles.css
+++ b/css/styles.css
@@ -537,3 +537,21 @@ margin-top: 40px;
   width: 100%;
   display: block;
 }
+/* contact */
+.contact-title {
+  color: var(--skin-color);
+  text-align: center;
+  font-size: 25px;
+  margin-bottom: 20px;
+} 
+.contact-sub-title {
+  color: var(--text-black-900);
+  text-align: center;
+  font-size: 15px;
+  margin-bottom: 60px;
+} 
+.contact .contact-info-item {
+  flex: 0 0 25%;
+  max-width: 25%;
+  text-align: center;
+}
