--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -9,7 +9,11 @@
   z-index: 101;
   border-radius: 5px;
   transition: all 0.3s ease;
+  transform: translateX(100%);
 }
+.style-switcher .open {
+  transform: translateX(-25px);
+} 
 .style-switcher .s-icon {
   position: absolute;
   height: 40px;
@@ -51,7 +55,6 @@
   height: 30px;
   width: 30px;
   border-radius: 50%;
-  border: 1px solid red;
 }
 .style-switcher .color-1 {
   background: #ec1839;
