--- a/css/styles.css
+++ b/css/styles.css
@@ -51,11 +51,24 @@ z-index: 0;
 overflow-y: auto;
 overflow-x: hidden;
 }
+.section.back-section {
+  z-index: 1;
+}
 .section.active
 {
   z-index: 2;
   opacity: 1;
-
+  animation: slideSection 1s ease;
+}
+@keyframes slideSection {
+  0%
+{
+  transform: translateX(100%);
+}
+100%
+{
+transform:translateX(0%);
+}
 }
 .hidden {
   display: none !important;
