--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;600&family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;600&family=Roboto:wght@400;500;700&display=swap");
 
 :root
 {
@@ -282,7 +282,7 @@ transform:translateX(0%);
 
 }
 .h3 .hello {
-  font-size: 28px;
+  font-size: 20px;
   margin: 15px 0;
 }
 .h3 .hello span {
@@ -292,15 +292,15 @@ transform:translateX(0%);
   color: var(--skin-color);
 }
 h3 .my-profession {
-  font-size:30px;
+  font-size:100px;
   margin: 15px 0;
 }
 .typing {
   color: var(--skin-color);
 }
 .home-info p{
-  margin-bottom: 70px;
-  font-size: 20px;
+  margin-bottom: 10px;
+  font-size: 15px;
   color: var(--bg-black-700);
 }
 .home .home-img{
